- sql:
    - exists() becomes useable as a standalone selectable, not just in a 
    WHERE clause
    - correlated subqueries work inside of ORDER BY, GROUP BY
- orm:
    - a full select() construct can be passed to query.select() (which
      worked anyway), but also query.selectfirst(), query.selectone() which
      will be used as is (i.e. no query is compiled). works similarly to
      sending the results to instances().
    - added "refresh-expire" cascade [ticket:492]
    - more fixes to polymorphic relations, involving proper lazy-clause
      generation on many-to-one relationships to polymorphic mappers 
      [ticket:493]
    
0.3.5
- sql:
    - the value of "case_sensitive" defaults to True now, regardless of the
      casing of the identifier, unless specifically set to False. this is
      because the object might be label'ed as something else which does
      contain mixed case, and propigating "case_sensitive=False" breaks that.
      Other fixes to quoting when using labels and "fake" column objects
    - added a "supports_execution()" method to ClauseElement, so that
      individual kinds of clauses can express if they are appropriate for
      executing...such as, you can execute a "select", but not a "Table" or a
      "Join".
    - fixed argument passing to straight textual execute() on engine,
      connection. can handle *args or a list instance for positional, **kwargs
      or a dict instance for named args, or a list of list or dicts to invoke
      executemany()
    - small fix to BoundMetaData to accept unicode or string URLs
    - fixed named PrimaryKeyConstraint generation [ticket:466] courtesy
      andrija at gmail
    - fixed generation of CHECK constraints on columns [ticket:464]
    - fixes to tometadata() operation to propigate Constraints at column and
      table level
- oracle:
    - when returning "rowid" as the ORDER BY column or in use with ROW_NUMBER